--- a/Malin_Space_Science_System/Malin_Space_Science_System.csproj
+++ b/Malin_Space_Science_System/Malin_Space_Science_System.csproj
@@ -33,9 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AstroMath, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Astro_Math, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\AstroMath.dll</HintPath>
+      <HintPath>bin\Debug\Astro_Math.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
